Add quick URL add functionality index.html

--- a/public/index.html
+++ b/public/index.html
@@ -367,7 +367,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📋 Job Search Tracker</h1>
+        <h1>🦸‍♂️ Job Search Tracker</h1>
 
         <!-- Job Search Section -->
         <div class="search-section">
@@ -384,6 +384,7 @@
 
         <div class="controls">
             <button class="btn btn-primary" onclick="openAddJobModal()">➕ Add Job Manually</button>
+            <button class="btn" onclick="openQuickAddModal()">⚡ Quick Add from URL</button>
             <select id="statusFilter" onchange="filterJobs()">
                 <option value="all">All Jobs</option>
                 <option value="new">New</option>
