Adjust edit job button

--- a/public/index.html
+++ b/public/index.html
@@ -646,7 +646,7 @@
                         <button class="btn btn-small" onclick="prepareCareerflow('${job.id}')">Prepare for Careerflow</button>
                         <button class="btn btn-small" onclick="updateStatus('${job.id}', 'applied')">Mark Applied</button>
                         <button class="btn btn-small" onclick="deleteJob('${job.id}')">Delete</button>
-                        <button class="btn btn-small" onclick="openEditJobModal('${job.id}')">Edit</button>
+                        <button class="btn btn-small" onclick="editJobModal('${job.id}')">Edit</button>
                     </div>
                 </div>
             `).join('');
